--- a/package.json
+++ b/package.json
@@ -12,34 +12,33 @@
   },
   "author": "gaona",
   "license": "MIT",
+  "dependencies": {
+    "babel-polyfill": "^6.3.14",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.1.2",
+    "redux": "^3.1.2"
+  },
   "devDependencies": {
-    "axios": "^0.17.1",
-    "babel-core": "^6.26.0",
-    "babel-loader": "^7.1.2",
-    "babel-polyfill": "^6.26.0",
+    "babel-core": "^6.3.15",
+    "babel-loader": "^6.2.0",
     "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "consolidate": "^0.15.0",
-    "css-loader": "^0.28.9",
-    "expose-loader": "^0.7.4",
-    "express": "^4.16.2",
-    "file-loader": "^1.1.6",
-    "html-webpack-plugin": "^2.30.1",
-    "jquery": "^3.3.1",
-    "json-loader": "^0.5.7",
-    "mustache": "^2.3.0",
-    "node-sass": "^4.7.2",
-    "postcss-loader": "^2.1.0",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^3.1.3",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.3.13",
+    "cross-env": "^1.0.7",
+    "expect": "^1.8.0",
+    "express": "^4.13.3",
+    "jsdom": "^5.6.1",
+    "mocha": "^2.2.5",
+    "node-libs-browser": "^0.5.2",
+    "react-addons-test-utils": "0.14.7",
+    "react-redux": "^4.4.8",
     "redux": "^3.7.2",
-    "sass-loader": "^6.0.6",
-    "style-loader": "^0.20.1",
-    "url-loader": "^0.6.2",
-    "webpack": "^3.10.0",
-    "webpack-dev-server": "^2.11.1"
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.2.0",
+    "webpack-hot-middleware": "^2.9.1"
   }
 }
